# projetoOne

sesuite-main/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sesuite-main/src/pysesuite/: __init__.py  actions.py  attributes.py  components.py  exceptions.py  files.py  render.py  sesuite.py  utils.py
sesuite-main/src/pysesuite/parsing/: __init__.py  utils.py  xml_parser.py
sesuite-main/src/pysesuite/templates/actions/: base.xml  cancel_workflow.xml  execute_activity.xml  execute_system_activity.xml  get_table_record.xml  new_attachment.xml  new_child_entity_record.xml  new_workflow_edit_data.xml
sesuite-main/src/pysesuite/templates/attributes/: entity.xml  relationship.xml  tablefield.xml
