[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysesuite"
description = ""
readme = "README.md"
authors = [
    { name = "", email = "" },
]
requires-python = ">=3.9"
dependencies = ["jinja2>=3.1.5", "requests>=2.32.3"]
dynamic = ['version']

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "python-lsp-server>=1.12.2",
    "types-requests>=2.32.0.20241016",
]

[tool.hatch.version]
path = 'src/pysesuite/__init__.py'

[tool.ruff]
extend = ""
target-version = "py39"

[tool.ruff.lint]
ignore = ["S405", "S314"]
